main problams fixed

--- a/server/.env
+++ b/server/.env
@@ -1,14 +1,12 @@
 PORT = 5000
 
-DB_NAME = heroes_lib
-DB_USER = postgres
-DB_PASSWORD = 130504A
+DB_NAME = neondb
+DB_USER = neondb_owner
+DB_PASSWORD = bt2aTFsOA1Ur 
 # DB_PASSWORD = VvJDSxKam4KeZ
-DB_HOST = localhost
-DB_PORT = 5432
+DB_HOST = ep-little-rain-a28bgx9g.eu-central-1.aws.neon.tech
 
-CLOUDINARY_KEY=663152919142269
-CLOUDINARY_SECRET=txOB2qw9bDWT5va0uNeoUebQ56E
+DB_PORT = 5432
 
 BASE_FRONTEND_URL=http://localhost:3000
 BASE_BACKEND_URL=http://localhost:5000/api
